[RESEARCH] Add Android logs in the DumpNodes function
This helps with better debugging.

The logging facility is borrowed from tflite existing
TFLITE_LOG_PROD macro.

Also add the DumpNodes() call from InferenceContext::Compile()

--- a/tensorflow/lite/delegates/gpu/cl/BUILD
+++ b/tensorflow/lite/delegates/gpu/cl/BUILD
@@ -420,6 +420,7 @@ cc_library(
         ":recordable_queue_builder",
         ":serialization_cc_fbs",
         ":tensor",
+        "//tensorflow/lite:minimal_logging",
         "//tensorflow/lite/delegates/gpu/common:data_type",
         "//tensorflow/lite/delegates/gpu/common:gpu_model",
         "//tensorflow/lite/delegates/gpu/common:gpu_model_cc_fbs",
